--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,9 @@ a{
     padding:5px;
     margin-top: 18px;
     align-self:flex-end;
+    border: none;
+    width: 100px;
+    height: 40px;
 }
 .catch{
     font-size: 48px;
@@ -73,7 +76,6 @@ a{
     display: flex;
     align-items: stretch;
     margin-right: 3px;
-    /*border: solid 2px orange;*/
     max-width: 100%;
     overflow: hidden;
 }
@@ -84,14 +86,12 @@ img{
 }
 
 .section1{
-    /*border:red solid 2px;*/
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .randomtext{
-    /*border:rgb(39, 15, 145) solid 2px;*/
     width: 70%;
     margin: 25px auto 30px auto;
 }
@@ -113,9 +113,65 @@ img{
     margin-bottom: 20px;
 }
 .ilustr-image{
-    border:rgb(52, 199, 84) solid 2px;
+    border:#9dc0fa solid 2px;
     height: 80%;
     width: 100%;
     border-radius: 5px;
     margin-bottom: 8px;
+}
+.inspiration{
+    width: 100%;
+    height: 150px;
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:end;
+}
+.quote{
+    font-size: 24px;
+    width: 45%;
+    font-style: italic;
+}
+.author{
+    width: 45%;
+    text-align: right;
+    margin: 20px auto 20px auto;
+
+}
+.call{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 180px;
+}
+.action{
+    width: 60%;
+    background-color: #3b82f6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height:80px;
+    border-radius: 5px;
+}
+.action-msg h1,p{
+    margin-left: 20px;
+}
+.signup2{
+    margin-right: 20px;
+    height: 50%;
+    width: 20%;
+    color: #ffffff;
+    background-color: #3b82f6;
+    border: #ffffff solid 1px;
+    border-radius: 5px;
+    font-size: large;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    background-color: #1F2937;
+    color: #ffffff;
 }
